--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "My third project",
   "main": "index.js",
+  "type": "module",
+  "bin": {
+    "page-loader": "bin/page-loader.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/petrovanna/backend-project-4/issues"
   },
-  "homepage": "https://github.com/petrovanna/backend-project-4#readme"
+  "homepage": "https://github.com/petrovanna/backend-project-4#readme",
+  "devDependencies": {
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
