--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   },
   "homepage": "https://github.com/petrovanna/backend-project-4#readme",
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.3.1",
-    "@jest/globals": "^29.3.1",
     "nock": "^13.2.9"
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "cheerio": "^1.0.0-rc.12",
     "commander": "^9.4.1"
   }
 }
