--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.3.1",
-    "nock": "^13.2.9"
+    "nock": "^13.2.9",
+    "prettier": "2.8.3"
   },
   "dependencies": {
     "axios": "^1.2.2",
