--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "prettier": "2.8.3"
   },
   "dependencies": {
-    "axios": "^1.2.2",
+    "axios": "^1.2.4",
+    "axios-debug-log": "^1.0.0",
     "cheerio": "^1.0.0-rc.12",
-    "commander": "^9.4.1"
+    "commander": "^9.4.1",
+    "debug": "^4.3.4"
   }
 }
