--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios-debug-log": "^1.0.0",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^9.4.1",
-    "debug": "^4.3.4"
+    "debug": "^4.3.4",
+    "listr": "^0.14.3"
   }
 }
